--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="de-DE">
-<head>
-    <title>Minimal</title>
-    <style>
-        html body {
-            font-family: Quicksand, sans-serif;
-            background-color: white;
-        }
+    <head>
+        <title>Minimal</title>
+        <style>
+            body {
+                background-image: url(images/page-not-found.svg);
+                background-size: cover;
+                background-repeat: no-repeat;
+                height: 0;
+                width: 100%;
+                padding-bottom: 221px;
+            }
 
-        :root {
-            --accent: #e84e40;
-            --border-width: 5px;
-        }
+            @media only screen
+            and (min-width : 1024px) {
+                body {
+                    background-size: auto 800px;
+                    background-position: center top;
+                }
+            }
 
-        img.center{
-            display: block;
-            margin-left: auto;
-            margin-right: auto
-        }
-
-    </style>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-
-<body>
-<img class="center" src="images/page-not-found.png" alt="404 Page Not Found"/>
-</body>
-
+        </style>
+        <meta charset="utf-8">
+        <meta name="robots" content="noindex, nofollow">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body>
+        <div>&nbsp;</div>
+    </body>
 </html>
 
